--- a/acceptance-test/pom.xml
+++ b/acceptance-test/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.wasupu</groupId>
-    <artifactId>kuwagara-acceptance-test</artifactId>
+    <groupId>io.ari</groupId>
+    <artifactId>ari-acceptance-test</artifactId>
     <version>0.1.0</version>
 
     <properties>
